--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "accounting-frontend",
   "version": "0.0.0",
   "scripts": {
+    "build-locales": "yaml2json -sr locales/",
     "build": "webpack",
     "build:release": "webpack --config webpack.config-release.js",
     "start": "webpack-dev-server",
@@ -16,11 +17,15 @@
   "license": "MIT",
   "dependencies": {
     "bind-decorator": "^1.0.11",
+    "i18next": "^8.4.3",
+    "i18next-browser-languagedetector": "^2.0.0",
+    "i18next-xhr-backend": "^1.4.2",
     "mobx": "^3.2.1",
     "mobx-react": "^4.2.2",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-i18next": "^4.6.4",
     "react-router-dom": "^4.1.2",
     "semantic-ui-css": "^2.2.11",
     "semantic-ui-react": "^0.71.0"
@@ -45,10 +50,14 @@
     ]
   },
   "devDependencies": {
+    "@types/i18next": "^8.4.1",
+    "@types/i18next-browser-languagedetector": "^2.0.0",
+    "@types/i18next-xhr-backend": "^1.4.0",
     "@types/jest": "^20.0.2",
     "@types/ramda": "^0.24.3",
     "@types/react": "^15.0.37",
     "@types/react-dom": "^15.5.1",
+    "@types/react-i18next": "^4.6.0",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-test-renderer": "^15.5.1",
     "autoprefixer": "^7.1.2",
@@ -69,6 +78,7 @@
     "tslint": "^5.5.0",
     "typescript": "^2.4.1",
     "webpack": "^3.2.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.5.1",
+    "yamljs": "^0.3.0"
   }
 }
