--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "bind-decorator": "^1.0.11",
+    "http-status-codes": "^1.1.6",
     "i18next": "^8.4.3",
     "i18next-browser-languagedetector": "^2.0.0",
     "i18next-xhr-backend": "^1.4.2",
@@ -38,7 +39,7 @@
       "js"
     ],
     "transform": {
-      "^.+\\.(ts|tsx)$": "<rootDir>/jest-preprocessor.js"
+      "^.+\\.(ts|tsx|scss)$": "<rootDir>/jest-preprocessor.js"
     },
     "testMatch": [
       "**/__tests__/*.(ts|tsx|js)",
@@ -50,6 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^2.8.3",
+    "@types/enzyme-to-json": "^1.5.0",
+    "@types/fetch-mock": "^5.8.3",
+    "@types/http-status-codes": "^1.0.29",
     "@types/i18next": "^8.4.1",
     "@types/i18next-browser-languagedetector": "^2.0.0",
     "@types/i18next-xhr-backend": "^1.4.0",
@@ -63,7 +68,10 @@
     "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "^3.2.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
+    "enzyme-to-json": "^1.5.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fetch-mock": "^5.12.1",
     "file-loader": "^0.11.2",
     "git-revision-webpack-plugin": "^2.5.1",
     "jest": "^20.0.4",
