--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-i18next": "^4.6.4",
     "react-router-dom": "^4.1.2",
     "semantic-ui-css": "^2.2.11",
-    "semantic-ui-react": "^0.71.0"
+    "semantic-ui-react": "^0.71.0",
+    "tsdi": "^0.14.0"
   },
   "jest": {
     "collectCoverage": true,
