--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-hostfile       = hosts
+inventory      = hosts
 library        = /usr/share/ansible
 remote_tmp     = $HOME/.ansible/tmp
 pattern        = *
